# miRpy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mirpy/: __init__.py  cli.py  count.py  downloader.py  gfftools.py  map.py  miRpyClasses.py  tester.py  viewer.py
src/mirpy/data/: sample1.bam  sample1.bam.bai  sample2.bam  sample2.bam.bai  sample3.bam  sample3.bam.bai
tests/: test_cli_args.py  test_mirpy_bamnostic.py
